tests/baselines/reference/parserSkippedTokens10.errors.txt
==== tests/cases/compiler/parserSkippedTokens10.ts (4 errors) ====
    \
    ~
!!! parserSkippedTokens10.ts(1,1): error TS1001: Unexpected character "\".
    ~
!!! parserSkippedTokens10.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    \
    ~
!!! parserSkippedTokens10.ts(2,1): error TS1001: Unexpected character "\".
    ~
!!! parserSkippedTokens10.ts(2,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    /*existing trivia*/ ;
    